<resources>
    <string name="app_name">esem</string>

    <string name="placeholder_text">Placeholder Text</string>
    <string name="first_screen">First Screen</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="result">Result</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="welcome">Welcome</string>
</resources>
